cfn-coreos.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "CoreOS on EC2: http://coreos.com/docs/running-coreos/cloud-providers/ec2/",
  "Parameters": {
    "VPC" : { "Description" : "VPC Id", "Type" : "AWS::EC2::VPC::Id" },
    "PublicSubnet1" : { "Description" : "PublicSubnet1", "Type" : "AWS::EC2::Subnet::Id" },
    "PublicSubnet2" : { "Description" : "PublicSubnet2", "Type" : "AWS::EC2::Subnet::Id" },
    "PublicSubnet3" : { "Description" : "PublicSubnet3", "Type" : "AWS::EC2::Subnet::Id" },
    "PrivateSubnet1" : { "Description" : "PrivateSubnet1", "Type" : "AWS::EC2::Subnet::Id" },
    "PrivateSubnet2" : { "Description" : "PrivateSubnet2", "Type" : "AWS::EC2::Subnet::Id" },
    "PrivateSubnet3" : { "Description" : "PrivateSubnet3", "Type" : "AWS::EC2::Subnet::Id" },
    "AvailabilityZone1" : { "Description" : "Availability Zone for ${SUBNET}1", "Type" : "String" },
    "AvailabilityZone2" : { "Description" : "Availability Zone for ${SUBNET}2", "Type" : "String" },
    "AvailabilityZone3" : { "Description" : "Availability Zone for ${SUBNET}3", "Type" : "String" },

    "CoreOSImageId" : {
      "Description": "Image for CoreOS",
      "Type" : "String",
      "Default" : "ami-343b195c"
    },
    "InstanceType" : {
      "Description" : "EC2 PV instance type (m3.medium, etc). Note: m1.small is not supported.",
      "Type" : "String",
      "Default" : "t1.micro",
      "AllowedValues" : ["m3.medium", "m3.large", "m3.xlarge", "m3.2xlarge", "m1.medium", "m1.large", "m1.xlarge", "c3.large", "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c1.medium", "c1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "hi1.4xlarge", "hs1.8xlarge", "t1.micro", "t2.micro"],
      "ConstraintDescription" : "Must be a valid EC2 instance type. Note: m1.small is not supported."
    },
    "ClusterSize": {
      "Default": "3",
      "MinValue": "1",
      "MaxValue": "6",
      "Description": "Number of nodes in cluster (1-6).",
      "Type": "Number"
    },
    "DiscoveryURL": {
      "Description": "An unique etcd cluster discovery URL. Grab a new token from https://discovery.etcd.io/new",
      "Type": "String"
    },
    "AdvertisedIPAddress": {
      "Description": "Use 'private' if your etcd cluster is within one region or 'public' if it spans regions or cloud providers.",
      "Default": "private",
      "AllowedValues": ["private", "public"],
      "Type": "String"
    },
    "AllowSSHFrom": {
      "Description": "The net block (CIDR) that SSH is available to.",
      "Default": "0.0.0.0/0",
      "Type": "String"
    },
    "KeyPair" : {
      "Description" : "The name of an EC2 Key Pair to allow SSH access to the instance.",
      "Default": "AaronBrown",
      "Type" : "String"
    }
  },
  "Resources": {
    "CoreOSELBSG" : {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId" : { "Ref" : "VPC" },
        "GroupDescription": "CoreOS ELB SecurityGroup",
        "SecurityGroupIngress": [ {"IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" } ]
      }
    },
    "CoreOSSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId" : { "Ref" : "VPC" },
        "GroupDescription": "CoreOS SecurityGroup",
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": {"Ref": "AllowSSHFrom"}}
        ]
      }
    },
    "Ingress8080": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "CoreOSSecurityGroup"},
        "IpProtocol": "tcp",
        "FromPort": "8080",
        "ToPort": "8080",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Ingress4001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Ref": "CoreOSSecurityGroup"}, "IpProtocol": "tcp", "FromPort": "4001", "ToPort": "4001", "SourceSecurityGroupId": {
          "Fn::GetAtt" : [ "CoreOSSecurityGroup", "GroupId" ]
        }
      }
    },
    "Ingress7001": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {"Ref": "CoreOSSecurityGroup"}, "IpProtocol": "tcp", "FromPort": "7001", "ToPort": "7001", "SourceSecurityGroupId": {
          "Fn::GetAtt" : [ "CoreOSSecurityGroup", "GroupId" ]
        }
      }
    },
    "CoreOSELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "Subnets": [
          { "Ref": "PublicSubnet1" },
          { "Ref": "PublicSubnet2" },
          { "Ref": "PublicSubnet3" }
        ],
        "ConnectionDrainingPolicy" : {
          "Enabled" : "true",
          "Timeout" : "30"
        },
        "SecurityGroups" : [ { "Fn::GetAtt" : [ "CoreOSELBSG", "GroupId" ] } ],
        "CrossZone" : "true",
        "HealthCheck" : {
          "HealthyThreshold": 2,
          "Interval": 30,
          "Target": "HTTP:8080/",
          "Timeout": 5,
          "UnhealthyThreshold": 2
        },
        "Listeners" : [
          {
            "InstancePort" : "8080",
            "InstanceProtocol" : "HTTP",
            "LoadBalancerPort" : "80",
            "Protocol" : "HTTP"
          }
        ]
      }
    },
    "CoreOSServerAutoScale": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "VPCZoneIdentifier": [
          { "Ref": "PrivateSubnet1" },
          { "Ref": "PrivateSubnet2" },
          { "Ref": "PrivateSubnet3" }
        ],
        "AvailabilityZones": [
          { "Ref": "AvailabilityZone1" },
          { "Ref": "AvailabilityZone2" },
          { "Ref": "AvailabilityZone3" }
        ],
        "LaunchConfigurationName": {"Ref": "CoreOSServerLaunchConfig"},
        "MinSize": "1",
        "MaxSize": "6",
        "DesiredCapacity": {"Ref": "ClusterSize"},
        "Tags": [
            {"Key": "Name", "Value": { "Ref" : "AWS::StackName" }, "PropagateAtLaunch": true}
        ],
        "LoadBalancerNames" : [ { "Ref" : "CoreOSELB" } ]
      },
      "UpdatePolicy" : {
        "AutoScalingRollingUpdate" : {
          "MinInstancesInService" : "1"
        }
      }
    },
    "CoreOSServerLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId" : { "Ref" : "CoreOSImageId" },
        "InstanceType": {"Ref": "InstanceType"},
        "KeyName": {"Ref": "KeyPair"},
        "SecurityGroups": [ {"Fn::GetAtt" : [ "CoreOSSecurityGroup", "GroupId" ] } ],
        "UserData" : { "Fn::Base64":
          { "Fn::Join": [ "", [
            "#cloud-config\n\n",
            "coreos:\n",
            "  fleet:\n",
            "    metadata: region=", { "Ref" : "AWS::Region" }, "\n",
            "  etcd:\n",
            "    peer-heartbeat-interval: 100\n",
            "    peer-election-timeout: 500\n",
            "    discovery: ", { "Ref": "DiscoveryURL" }, "\n",
            "    addr: $", { "Ref": "AdvertisedIPAddress" }, "_ipv4:4001\n",
            "    peer-addr: $", { "Ref": "AdvertisedIPAddress" }, "_ipv4:7001\n",
            "  units:\n",
            "    - name: etcd.service\n",
            "      command: start\n",
            "    - name: fleet.service\n",
            "      command: start\n",
            "    - name: docker.service\n",
            "      command: start\n",
            "    - name: blog.service\n",
            "      command: start\n",
            "      content: |\n",
            "        [Unit]\n",
            "        Description=Blog\n",
            "        After=docker.service\n",
            "        Requires=docker.service\n",
            "        [Service]\n",
            "        TimeoutStartSec=0\n",
            "        ExecStartPre=-/usr/bin/docker kill blog\n",
            "        ExecStartPre=-/usr/bin/docker rm blog\n",
            "        ExecStartPre=/usr/bin/docker pull aaronbbrown/blog\n",
            "        ExecStart=/usr/bin/docker run --rm --name blog -p 8080:80 aaronbbrown/blog\n",
            "        ExecStop=/usr/bin/docker stop blog\n",
            "        [X-Fleet]\n",
            "        Global=true\n",
            "        MachineMetadata=region=", { "Ref" : "AWS::Region" }, "\n"
            ] ]
          }
        }
      }
    }
  }
}
